--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 * {
 	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
 }
 
 body {
+	margin: 0;
 	font-family: 'Raleway', sans-serif;
-	line-height: 1.6;
 }
 .home {
 	text-align: center;
@@ -17,38 +15,40 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.calculator {
-	text-align: center;
-	height: 100vh;
-	padding: 1.5rem;
-	background-color: #5ed5de;
-}
+
 .start-button {
 	font-weight: bold;
 	border: none;
-	padding: 1rem;
+	padding: 0.75rem;
 	border-radius: 12px;
 	background-color: rgb(94, 218, 218);
 	color: white;
 }
 .start-button:hover {
 	color: black;
-	background-color: rgb(255, 221, 27);
+	background-color: rgb(255, 166, 0);
 }
 
 .logo {
+	display: inline-block;
 	position: absolute;
 	left: 0;
 	top: 0;
 	width: 300px;
 	height: 300px;
 }
+
+.switch {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+}
 .switch input {
 	display: none;
 }
 
 .switch label :checked + span {
-	background-color: rgb(255, 221, 27);
+	background-color: rgb(255, 166, 0);
 	color: black;
 }
 
@@ -61,4 +61,61 @@ body {
 	line-height: 2em;
 	text-align: center;
 	border-radius: 12px;
+}
+.main {
+	text-align: center;
+	background-color: #5ed5de;
+}
+.logo-container img {
+	width: 300px;
+	height: 300px;
+}
+
+.calculator {
+	width: 100%;
+	margin: 0 auto;
+}
+form {
+	padding: 2rem;
+}
+form label {
+	width: 100%;
+	margin: 0 auto;
+}
+form input,
+select {
+	width: 100%;
+	padding: 10px 18px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+}
+
+.submit-button {
+	width: 100%;
+	background-color: rgb(255, 166, 0);
+	margin-top: 10px;
+	margin: 0 auto;
+	text-align: center;
+	font-weight: bold;
+	margin-top: 20px;
+}
+@media (min-width: 720px) {
+	.main {
+		display: flex;
+		height: 100vh;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+	.calculator {
+		width: 40%;
+		padding: 20px;
+	}
+	.logo-container {
+		width: 40%;
+	}
+	.logo-container img {
+		width: 400px;
+		height: 400px;
+	}
 }
