--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 body {
 	margin: 0;
-	font-family: cursive;
+	font-family: sans-serif;
 }
 .home {
 	text-align: center;
@@ -56,6 +56,8 @@ body {
 	padding: 20px;
 }
 .main {
+	padding: 20px;
+	height: 100vh;
 	text-align: center;
 	background-color: #cfc0b3;
 }
@@ -132,7 +134,6 @@ select {
 @media (min-width: 720px) {
 	.main {
 		display: flex;
-		height: 100vh;
 		justify-content: space-evenly;
 		align-items: center;
 	}
